CHANGES

release 76.0
 - use ${JENKINS_HOME}/tmp instead of /tmp for jenkins tmpdir 
 - add perlcritic policy to prohibit tabs, convert tab to two white space, correct 
   indentation issues
 - old and unused apache configuration files removed
 - IL instruments removed from instrument utilisation menu (we do not have them any more)
 - instrument uptime menu link removed - target graph is broken
 - consolidated all instrument menu 70* tests in one 20 test
 - removed code repetition from bin/ga_II_checker
 - removed depricated last_30_days method from npg::model::instrument_utilisation
 - fixed the code where in test conditions operations on undefined variables
   were performed
 - removed excessive verbosity in most of the tests
 - documentation in README, INSTALL and REDESIGN_PROPOSAL updated

release 75.6
 - extended inline index to read 2
 - hardcoded link for enigmatic authentication (not mod perl url) page so that the page
   is accessible from the server on sfweb, where enigmatic is not deployed;
   uncomment old code to restore the relative to the server root link for testing
 - apache2.2 compatible configuration files to run the tracking server under
   default apache version for Ubuntu precise; virtual host definitions in
   stand-alone files allow for dynamic inclusion of virtual hosts
 - fixed occasional authentication problem (inability of a particular thread to load
   additional modules due to the fact that on a second invocation of npg script in the
   same server thread @INC array is not extended since BEGIN block is not run) when
   running under apache2.2 by extending the server @INC array at server start up time 
 - bam, cram, etc files access is prohibited from the runfolder directories listings,
   however, these files are visible in listings
 - more convenient sorting order of directories and files in the runfolder directories
   listings
 - directory index CSS changed to get a margin on the left; brighter color scheme
   introduced