@@ -1,6 +1,15 @@
 CHANGES
 
 release 76.0
+ - added defaults for Perl indentation in Emacs for this repository
+ - definition of the repository root for single nucleotide variation files
+ - a new module defining rules for finding single nucleotide variation files
+ - changes to the database schema and code to ensure compliance with sql
+   strict mode, relevant changes to tests and test data
+ - if batch_id is not supplied at run creation, enforce zero in the model,
+     wider tests to be performed if NULL needs to be used
+ - id_run_pair defaults to null; examining and setting this field removed
+     from the code, the concept of run-pair has not been used for a long time
  - use ${JENKINS_HOME}/tmp instead of /tmp for jenkins tmpdir 
  - add perlcritic policy to prohibit tabs, convert tab to two white space, correct 
    indentation issues
